--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,33 @@
 
+body{
+  background-color: white;
+}
+
   .table-hover thead tr:hover th, .table-hover tbody tr:hover td {
     background-color: #DEFBFC;
 
 }
+
+.font-bold{
+  font-weight:bold;
+}
+ul.texto { 
+  list-style: none;
+  list-style-position: inside;
+}
+
+.size-font-resaltar{
+  font-size: 2.5rem;
+}
+
+.background-color-texto{
+  background-color: #4D3BD5;
+  color: white;
+}
+.font-cantidad-credito{
+  font-weight:bold;
+  color: black;
+  font-size: 2rem;
+  font-family: 'Oswald', sans-serif;
+}
+
