--- a/src/App.css
+++ b/src/App.css
@@ -36,7 +36,7 @@ ul.texto {
 }
 
 .margin-text-5{
-  margin-top: 5rem;;
+  margin-top: 5rem;
 }
 
 .back-ground-color-grey {
@@ -73,4 +73,8 @@ ul.texto {
 
 .general-padding{
   padding-top: 5rem;;
+}
+
+.font-grey{
+  color : #0BAF94;
 }
